feat: Add DTOs for organization and position management
- Created AssignUserRequest, CreateOrganizationRequest, CreatePositionRequest, DriveItem, OrganizationDto, OrganizationMemberDto, PositionDto, UpdateOrganizationRequest, UpdatePositionRequest, and VerifyPasswordRequest DTOs.
- Implemented Organization and OrganizationPosition models with JPA annotations.
- Added UserOrganization model to manage user memberships in organizations.
- Developed repositories for Organization, OrganizationPosition, and UserOrganization.
- Introduced GoogleService for handling Google Drive interactions.
- Created OrganizationService and PositionService for business logic related to organizations and positions.
- Updated User model to include relationships with UserOrganization.
- Removed unused application test class.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 HELP.md
 API_ENDPOINTS.md
 README.md
+DATABASE_MIGRATION.md
+IMPLEMENTATION_SUMMARY.md
 target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
