--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- Google Calendar API Dependencies - Simplified -->
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-calendar</artifactId>
+			<version>v3-rev20220715-1.32.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
